# ralph

./: .env.example  .gitignore  Dockerfile  Dockerfile.sandbox  README.md  karpa_bootstrap.py  pyproject.toml  ralph_bootstrap.py  restricted_files.yaml
.github/workflows/: ci.yml
auditor/: README.md  __init__.py  __main__.py  chain.py  diff.py  fetch.py  gate4.py  main.py  replay.py  verify.py  weights.py
calibration/: __init__.py  benchmark.py
chain_layer/: __init__.py  bittensor_chain.py  config.py  interface.py  local.py  submission_commitment.py
configs/: h100_default.json
dashboard/: app.py
data/: prepare.py  tokenizer.py
docs/: h100_miner_setup.md  launch_tweets.md  phase_0_5_results.md  phase_0_5b_results.md  whitepaper_v1.2_updates.md
docs/license/: hardness_subset_decision.md
docs/recipe/: s3_wall_clock_calibration.md
eval/: __init__.py  benchmark.py  hidden_eval.py  host_reduce.py  sealed_streams.py  val_bpb.py
eval/downstream/: DEFERRED.md  __init__.py  aggregate.py  calibration.py  core22.py  grader.py  private_hard.py  runner.py  runner_cli.py  runner_subprocess.py  scorer.py  types.py
miner/: __init__.py  agent_corpus.py  agent_memory.py  github_pr.py  hub.py  submit.py  submit_to_queue.py
miner/agent_prompts/: agent_a_aggressive.md  agent_b_conservative.md
model/: __init__.py  autoralph_base.py
proof/: __init__.py  bundle_crypto.py  mock_attest.py  real_attest.py  runner.py  sources.py
queue/scored/4ee92f4c95d97def/: bundle_manifest.json  calibration.json  submission.json
queue/scored/4ee92f4c95d97def/training/: final_state.json  training_log.jsonl
queue/scored/52b1a59c2e54a1c7/: bundle_manifest.json  calibration.json  submission.json
queue/scored/52b1a59c2e54a1c7/training/: final_state.json  training_log.jsonl
recipe/: train.py
scripts/: analyze_b6_rho.py  b4_cpu_smoke.py  b5_h100_calibration.py  b6_run.py  build_refs_from_published.py  cache_hf_assets.py  download_dclm_bundle.py  gpu.py  miner_run.py  noise_floor.py  orphan_gpu_sweep.py  round_setup.sh  run_h100.sh  smoke_test.py  testnet_cycle.py
tests/: _runner_subprocess_test_entry.py  conftest.py  test_agent_corpus.py  test_agent_memory.py  test_analyze_b6_rho.py  test_attestation_gate.py  test_audit_report.py  test_audit_scheduler.py  test_auditor_fixes.py  test_auditor_gate4.py  test_auditor_roundtrip.py  test_auditor_weights.py  test_b4_cpu_smoke.py  test_b5_h100_calibration.py  test_b6_run.py  test_build_refs_from_published.py  test_bundle_crypto.py  test_burn_fallback.py  test_cache_hf_assets.py  test_chain_block_hash.py  test_compute_crown_gate.py  test_crown_high_water_mark.py  test_download_dclm_bundle.py  test_downstream_aggregate.py  test_downstream_calibration.py  test_downstream_core22.py  test_downstream_grader.py  test_downstream_private_hard.py  test_downstream_runner.py  test_downstream_runner_cli.py  test_downstream_runner_subprocess.py  test_downstream_scorer.py  test_downstream_types.py  test_eval_fail_closed.py  test_eval_seq_len_pin.py  test_handshake_onchain.py  test_hf_poller_attribution.py  test_hf_poller_versioning.py  test_hidden_eval_schema_versioning.py  test_hosb_benchmark.py  (+34 more)
validator/: __init__.py  audit.py  audit_publish.py  audit_report.py  audit_scheduler.py  eval_in_workdir.py  github_bot.py  hf_bot.py  hf_poller.py  inflight.py  integrity.py  ladder.py  lineage.py  multiseed.py  router.py  sandbox.py  sandbox_eval.py  scoring.py  service.py  validator.py  version.py
